--- a/app/assets/stylesheets/_login-header.scss
+++ b/app/assets/stylesheets/_login-header.scss
@@ -1,5 +1,5 @@
 .login-header-wrapper{
-  .header {
+  .login-header-wrapper-header {
     height:128px;
     text-align: center;
     background-color: #eee;
