--- a/app/views/shared/_login-header.html.haml
+++ b/app/views/shared/_login-header.html.haml
@@ -1,5 +1,5 @@
 .login-header-wrapper
-  .header
+  .login-header-wrapper-header
     %h1
       %a{href: "https://www.mercari.com/jp/"}
         %img{alt: "mercari", src: "//www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?2482339763",
