--- a/app/assets/stylesheets/_purchase-confirmation.scss
+++ b/app/assets/stylesheets/_purchase-confirmation.scss
@@ -195,7 +195,7 @@ main {
 }
 
 // ここからフッター
-footer{
+.purchase-confirmation-footer{
     height: 250px;
     padding: 40px 0;
     text-align: center;
