--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,7 +11,7 @@
 @import 'aside';
 @import 'bread-crumbs';
 @import 'credit-register';
-@import 'credit1';
+@import 'credit-enter';
 @import 'devise';
 @import 'exhibit';
 @import 'goods';
