--- a/app/views/shared/_profile-sidebar.html.haml
+++ b/app/views/shared/_profile-sidebar.html.haml
@@ -80,7 +80,7 @@
           発送元・お届け先住所変更
           %i.fas.fa-chevron-right
       %li
-        %a{href: '#', class: 'mypage-nav__list__item'} 
+        %a{href: tests_credit_enter_path , class: 'mypage-nav__list__item'} 
           支払い方法
           %i.fas.fa-chevron-right
       %li
