--- a/app/assets/stylesheets/purchased_on_deal.scss
+++ b/app/assets/stylesheets/purchased_on_deal.scss
@@ -56,9 +56,9 @@
 }
 
 .purchased_on_deal {
+    position:relative;
     height: 1292px;
-    width: 1020px;
-    background-color: white; 
+    width: 1020px; 
     margin: 40px auto 0;
     margin-top: 40px;
     margin-right: auto;
@@ -68,6 +68,10 @@
     display: block; 
 
     &__content {
+        position: absolute;
+        top: 40px;
+        left: 360px;
+        background-color: lightblue;
         height: 382px;
         width: 720px; 
 
@@ -77,13 +81,12 @@
 
           &__tab-head {
             height: 72px;
-             width: 720px;   
+            width: 720px;   
           }
           &__mypage-tabs{
             height: 74px;
             width: 720px;
-              
-           
+            
           } 
     }
   }
