--- a/app/views/shared/_purchased_on_deal.html.haml
+++ b/app/views/shared/_purchased_on_deal.html.haml
@@ -1,27 +1,25 @@
 =render 'shared/main_page_header'
+
 %main.purchased_on_deal.clearfix
-  .content
-    %section.container
-      %h2.tab-head 
+  =render 'shared/profile-sidebar'
+  .purchased_on_deal__content
+    %section.purchased_on_deal__content__container
+      %h2.purchased_on_deal__content__container__tab-head 
         購入した商品
-      %ul.mypage-tabs
-        %li.active
-          %h3
+      %ul.purchased_on_deal__content__container__mypage-tabs
+        %li.purchased_on_deal__content__container__mypage-tabs__active
+          %purchased_on_deal__content__container__mypage-tabs__active__h3
             =link_to "#" do
               取引中
-        %li.
+        %li.purchased_on_deal__content__container__mypage-tabs__non-active
           %h3 
             =link_to "#" do
               過去の取引
-      .tab-content
-        %ul#mypage-tab-transaction-now.mypage-item-list__tab-pane--active
-          %li.mypage-item-not-found.bold
+      .purchased_on_deal__content__container__tab-content
+        %ul#mypage-tab-transaction-now.purchased_on_deal__content__container__tab-content__mypage-item-list__tab-pane--active
+          %li.purchased_on_deal__content__container__tab-content__mypage-item-list__tab-pane--active__mypage-item-not-found.bold
             取引中の商品がありません
-        %ul#mypage-tab-transaction-old.mypage-item-list__tab-pane
-          %li.mypage-item-not-found.bold
-          　過去に取引した商品がありません
-  =render 'shared/profile-sidebar'
-
-=render 'shared/aside'
-=render 'shared/footer'
+        %ul#mypage-tab-transaction-old.purchased_on_deal__content__container__tab-content__mypage-item-list__tab-pane
+          %li.mypage-tab-transaction-old.purchased_on_deal__content__container__tab-content__mypage-item-list__mypage-item-not-found.bold
+            過去に取引した商品がありません
           
