--- a/app/views/shared/_main_page_header.html.haml
+++ b/app/views/shared/_main_page_header.html.haml
@@ -4,7 +4,7 @@
     .header__main
       .header__upper
         .header__upper__left
-          %a.header__upper__left__a{href: "#"}
+          %a.header__upper__left__a{href: root_path}
             %img.header__upper__left__img{alt: "Mercari", src: "/merucari logo.svg"}/
         %form.header__upper__right{action: "/jp/search/"}
           %input.header__upper__right__in{name: "keyword", placeholder: "何かお探しですか？", type: "search", value: ""}/
