--- a/app/views/shared/_profile-sidebar.html.haml
+++ b/app/views/shared/_profile-sidebar.html.haml
@@ -88,7 +88,7 @@
           メール/パスワード
           %i.fas.fa-chevron-right
       %li
-        %a{href: '#', class: 'mypage-nav__list__item'} 
+        %a{href: tests_make_sure_user_info_path, class: 'mypage-nav__list__item'} 
           本人情報
           %i.fas.fa-chevron-right
       %li
