--- a/app/views/shared/_signup4.html.haml
+++ b/app/views/shared/_signup4.html.haml
@@ -1,36 +1,36 @@
 .login-header-wrapper
   = render 'shared/login-header'
 
-.signup3-wrapper
+.signup4-wrapper
   .contents
     .contents__head
       支払い方法
     = form_with(url: tests_signup5_path , class: "contents__form", local: true, method: 'GET') do |f|
-      .contents__form__title1
+      .contents__form__signup4-title
         %label カード番号
         %span.contents__form__require#card-number-require 必須
         = f.text_field :name, class: "contents__form__input" , placeholder: '半角数字のみ'
         %ul.contents__form__cardlist
-          %li
+          %li.contents__form__cardlist__icon
             = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/visa.svg?2482339763', height: "15", width: "40"
-          %li
+          %li.contents__form__cardlist__icon
             = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/master-card.svg?2482339763', height: "15", width: "40"
-          %li
+          %li.contents__form__cardlist__icon
             = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/saison-card.svg?2482339763', height: "15", width: "25"
-          %li
+          %li.contents__form__cardlist__icon
             = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/jcb.svg?2482339763', height: "15", width: "37"
-          %li
+          %li.contents__form__cardlist__icon
             = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/american_express.svg?2482339763', height: "15", width: "21"
-          %li
+          %li.contents__form__cardlist__icon
             = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/dinersclub.svg?2482339763', height: "15", width: "40"
-          %li
+          %li.contents__form__cardlist__icon
             = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/discover.svg?2482339763', height: "15", width: "21"
 
-      .contents__form__title
+      .contents__form__signup4-title
         %label 有効期限
         %span.contents__form__require 必須
         %div{ style:"display:inline-flex"}
-          %select{ name:"month", class:"contents__form__select contents__form__select__1" }
+          %select{ name:"month", class:"contents__form__time-select contents__form__select__1" }
             %option{value:""} --
             %option{value:"01"} 01
             %option{value:"02"} 02
@@ -45,7 +45,7 @@
             %option{value:"11"} 11
             %option{value:"12"} 12
           %span 月
-          %select{ name:"day", class:"contents__form__select" }
+          %select{ name:"day", class:"contents__form__time-select" }
             %option{value:""} --
             %option{value:"19"} 19
             %option{value:"20"} 20
@@ -60,7 +60,7 @@
             %option{value:"29"} 29
           %sapn 年
 
-      .contents__form__title
+      .contents__form__signup4-title
         %label セキュリティコード
         %span.contents__form__require 必須
         %input{ class:"contents__form__input", maxlength:"10", name:"card-name", placeholder:"カード背面4桁もしくは3桁の番号", type:"text", value:""}
