--- a/app/views/shared/_signup3.html.haml
+++ b/app/views/shared/_signup3.html.haml
@@ -5,7 +5,7 @@
     .contents__head
       発送元・お届け先住所入力
     -# .contents__forms
-    = form_with(url: tests_signup4_path, local: true, method: 'GET' ) do |f|
+    = form_with(url: tests_signup4_path, local: true, method: 'GET') do |f|
       .contents__form__title
         %label.contents__form__title__list
           お名前
@@ -109,7 +109,7 @@
         %span.contents__form__require__2 任意
         %input{ class:"contents__form__input", maxlength:"7", name:"password", placeholder:"例) 09012345678", type:"text", value:""}
     
-      =f.button '次に進む',class: 'contents__form__btn'
+      =f.button '次に進む',class: 'contents__head__btn'
 
 .signup3-wrapper__footer
   -# ページのフッター部分
