--- a/app/views/shared/_signup5.html.haml
+++ b/app/views/shared/_signup5.html.haml
@@ -1,18 +1,18 @@
 .login-header-wrapper
   = render 'shared/login-header'
-  .contents
-    .contents__head
+  .signup5-contents
+    .signup5-contents__head
       会員登録完了
-    .contents__form
-      .contents__form__title1
+    .signup5-contents__form
+      .signup5-contents__form__title1
         %p 
         ありがとうございます。
         %br
         会員登録が完了しました。
-      =link_to root_path, class:"contents__btn" do
+      =link_to root_path, class:"signup5-contents__form__btn" do
         メルカリをはじめる
 
-  .contents
+  .signup5-contents
     =link_to "aaa" do
       %img{ class:"cintents__image", alt:"", src:"//www-mercari-jp.akamaized.net/assets/img/signup/jp/banner-pc.jpg?2482339763",width:"560"}/
   
