--- a/app/views/tests/user_login.html.haml
+++ b/app/views/tests/user_login.html.haml
@@ -1,9 +1,9 @@
-.container
-  .contents
-    .header  
+.user-login-container
+  .user-login-contents
+    .user-login-header  
       %a{href: "https://www.mercari.com/jp/"}
         %img{alt: "mercari",width: 185,height: 95,src: "//www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?2482339763"}/
-    .main
+    .user-login-main
       .login-page
         .login-no-account
           %p アカウントをお持ちでない方はこちら
@@ -16,27 +16,27 @@
           = link_to'/user/auth/google', class: 'btn google' do
             %img.fab.fa-google{src: "https://img.icons8.com/color/20/000000/google-logo.png"}
             Googleでログイン
-        .form
+        .user-login-form
           .form-inner
             .form-inner__mail
-              %input.login-input-text{name: "email",placeholder: "メールアドレス",type: "email",value: ""}
+              %input.user-login-input-text{name: "email",placeholder: "メールアドレス",type: "email",value: ""}
             .form-inner__mail
-              %input.login-input-text{name: "password",placeholder: "パスワード",type: "password"}
+              %input.user-login-input-text{name: "password",placeholder: "パスワード",type: "password"}
             .form-inner__lobot
               .login-captcha
-                .form-group
+                .user-login-form-group
                   .g-recaptcha.login-captcha{"data-sitekey" => "6LfZGCYTAAAAAHoK-s7Lg5OdYg5Fq4susvALmZoc"}
                 %button.login-btn{type: "submit"} ログイン              
                 %a{href: "https://www.mercari.com/jp/password/reset/start/"} パスワードをお忘れの方
 
-    %footer.single-footer
-      %nav
-        %ul.clearfix
-          %li
+    %footer.user-login-single-footer
+      %nav.clearfix.user-login-single-footer__text-list
+        %ul.clearfix.user-login-single-footer__text-list
+          %li.user-login-single-footer__text-list__text
             %a{href: "https://www.mercari.com/jp/privacy/"} プライバシーポリシー
-          %li
+          %li.user-login-single-footer__text-list__text
             %a{href: "https://www.mercari.com/jp/tos/"} メルカリ利用規約
-          %li
+          %li.user-login-single-footer__text-list__text
             %a{href: "https://www.mercari.com/jp/tokutei/"} 特定商取引に関する表記
       %a.single-footer-logo{href: "https://www.mercari.com/jp/"}
         %img{alt: "mercari",height: "65",src: "//www-mercari-jp.akamaized.net/assets/img/common/common/logo-gray.svg?2482339763",width: "80"}
