--- a/app/assets/stylesheets/_edit-prfile.scss
+++ b/app/assets/stylesheets/_edit-prfile.scss
@@ -1,3 +1,6 @@
+.edit-profile-container{
+  margin-bottom: 40px;
+}
 .chapter-head {
   background-color: #fff;
   height: 30px;
@@ -44,3 +47,4 @@
   color: #fff;
   line-height: 40px;
 }
+
