--- a/app/views/shared/_profile-sidebar.html.haml
+++ b/app/views/shared/_profile-sidebar.html.haml
@@ -72,7 +72,7 @@
     %h3.mypage-nav__head 設定
     %ul.mypage-nav__list
       %li
-        %a{href: '#', class: 'mypage-nav__list__item'} 
+        %a{href: tests_edit_profile_path, class: 'mypage-nav__list__item'} 
           プロフィール
           %i.fas.fa-chevron-right
       %li
