--- a/app/assets/stylesheets/_top_pege_middle.scss
+++ b/app/assets/stylesheets/_top_pege_middle.scss
@@ -156,7 +156,6 @@
     cursor: pointer;
     height: 524px;
     width: 1020px;
-    background-color: aqua
     &__text {
       color: #222;
     }
@@ -167,7 +166,7 @@
     width: 188px;
     margin: 0 0 20px 10px;
     display: inline-block;
-    background-color: aqua
+    background-color: aqua;
   }
 
   .exhibit_btn{
