--- a/app/assets/stylesheets/purchased_on_deal.scss
+++ b/app/assets/stylesheets/purchased_on_deal.scss
@@ -49,11 +49,11 @@
 //   text-shadow: none;
 // }
 
-.clearfix:after {
-  content: '';
-  display: block;
-  clear: both;
-}
+// .clearfix:after {
+//   content: '';
+//   display: block;
+//   clear: both;
+// }
 
 .purchased_on_deal {
     position:relative;
@@ -71,7 +71,7 @@
         position: absolute;
         top: 40px;
         left: 360px;
-        background-color: lightblue;
+        background-color: white;
         height: 382px;
         width: 720px; 
 
@@ -82,38 +82,89 @@
           &__tab-head {
             height: 72px;
             width: 720px;
-            display: flex;
-
-            // display: inline-block; 
-            float: left;   
-          }
-          &__mypage-tabs{
-            height: 74px;
-            width: 720px;
-            display: inline-block; 
-            float: left; 
+            padding-top: 20px;
+            padding-bottom: 20px;
+            padding-left: 15px; 
+            box-sizing: border-box;
             
+            h2 {
+              font-size: 16px;
+              font-weight: bold;
+              color: black;
+            }
+          }
+
+          &__list-tabs {
+            height: 72px;
+            width: 720px;
+            
+            &__left {
+              height: 72px;
+              width: 360px;
+              padding: 20px 0; 
+              display: inline-block;
+              float: left;
+              box-sizing: border-box;
+
+              h3 {
+                font-size: 16px; 
+                text-align: center;
+                text-decoration-line: none;
+                
+                font-weight: bold;
+                a{
+                  text-decoration: none;
+                  color: black;
+                }
+              }
+            }
+
+            &__right {
+              height: 72px;
+              width: 360px;
+              padding: 20px 0; 
+              background-color: #eee;
+              display: inline-block;
+              float: right;
+              box-sizing: border-box;
+
+
+              h3 {
+                font-size: 16px; 
+                text-align: center;
+                color: black;
+                font-weight: bold;
+                a {
+                  text-decoration: none;
+                  color: black;
+                }
+              }
+            }
           } 
+          &__tab-content {
+              &__tab-content__mypage-item-list {
+                  &__mypage-item-not-found {
+                      
+                      // h3 {
+                      //     font-size: 16px; 
+                      //     text-align: center;
+                      //     margin-bottom: 20px; 
+
+                      // }
+                  }
+              }
+          }
     }
   }
 }
-.purchased_on_deal__content__container__mypage-tabs__active{
-
-height:74px;
-width:250px;
 
 
-&__h3{
+
+.h3{
   font-size: 16px;
   font-weight:600px;
   height:74px;
-  width:250px;
-  text-decoration: none;
-  text-align:center;
+  width:250;
+  text-align: center;
   color: #333;
   }
-
-
-
-
-}
