--- a/app/views/shared/_product-details.html.haml
+++ b/app/views/shared/_product-details.html.haml
@@ -71,7 +71,7 @@
           (税込)
         %span.price-box__fee
           送料込み
-      =link_to "http://localhost:3000/purchase/show", class: "item-buy-btn" do
+      =link_to tests_purchase_confirmation_path, class: "item-buy-btn" do
         購入画面に進む
       .item-description
         %p.item-description__inner
