--- a/app/views/shared/_purchased_on_deal.html.haml
+++ b/app/views/shared/_purchased_on_deal.html.haml
@@ -20,6 +20,8 @@
         %ul#mypage-tab-transaction-now.purchased_on_deal__content__container__tab-content__mypage-item-list
           %li.purchased_on_deal__content__container__tab-content__mypage-item-list__mypage-item-not-found
             取引中の商品がありません 
+            = image_tag '/mercari-logo-gray.svg', alt: "" , class: 'lazyloaded'
+              
 
     %ul.mypage-history.pager
       %li.pager-prev.pager-cell 
