--- a/app/assets/stylesheets/purchased_on_deal.scss
+++ b/app/assets/stylesheets/purchased_on_deal.scss
@@ -1,59 +1,3 @@
-// *{
-    
-//     font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
-//     color: #333;
-//     font-size: inherit;
-//     line-height: inherit;
-//     background-repeat: no-repeat;
-// }
-
-// *, ::before, ::after {
-//   border-style: solid;
-//   border-top-style: solid;
-//   border-right-style: solid;
-//   border-bottom-style: solid;
-//   border-left-style: solid;
-//   border-width: 0;
-//   border-top-width: 0px;
-//   border-right-width: 0px;
-//   border-bottom-width: 0px;
-//   border-left-width: 0px;
-//   box-sizing: inherit;
-//   border-style: solid;
-//   border-top-style: solid;
-//   border-right-style: solid;
-//   border-bottom-style: solid;
-//   border-left-style: solid;
-//   border-width: 0;
-//   border-top-width: 0px;
-//   border-right-width: 0px;
-//   border-bottom-width: 0px;
-//   border-left-width: 0px;
-//   border-style: solid;
-    
-// }
-
-// ::before ::after {
-//   text-decoration: inherit;
-//   text-decoration-line: inherit;
-//   text-decoration-style: inherit;
-//   text-decoration-color: inherit;
-//   vertical-align: inherit;
-  
-// }
-
-// ::selection {
-//   color: currentColor;
-//   background-color: #b3d4fc;
-//   color: #fff;
-//   text-shadow: none;
-// }
-
-// .clearfix:after {
-//   content: '';
-//   display: block;
-//   clear: both;
-// }
 
 .purchased_on_deal {
     position:relative;
@@ -76,6 +20,7 @@
         width: 720px; 
 
         &__container {
+            position: relative;
             height: 382px;
             width: 720px;
 
@@ -110,8 +55,7 @@
                 font-size: 16px; 
                 text-align: center;
                 text-decoration-line: none;
-                
-                font-weight: bold;
+                font-weight: bold;               
                 a{
                   text-decoration: none;
                   color: black;
@@ -141,30 +85,28 @@
               }
             }
           } 
-          &__tab-content {
-              &__tab-content__mypage-item-list {
-                  &__mypage-item-not-found {
-                      
-                      // h3 {
-                      //     font-size: 16px; 
-                      //     text-align: center;
-                      //     margin-bottom: 20px; 
-
-                      // }
+                  
                   }
               }
-          }
-    }
-  }
+        }
+
+
+  .purchased_on_deal__content__container__tab-content__mypage-item-list__mypage-item-not-found {
+    font-size: 16px; 
+    color: #eee;
+    position: absolute; 
+    top: 300px;
+    left: 250px;
+    right: 0;
+    margin: auto;
 }
 
-
-
-.h3{
-  font-size: 16px;
-  font-weight:600px;
-  height:74px;
-  width:250;
-  text-align: center;
-  color: #333;
-  }
+.lazyloaded { 
+  position: absolute;
+  height: 90px;
+  width: 90px;
+  bottom: 60px;
+  left: 0px;
+  right: 260px;
+  margin: auto;
+}
